fix right overflow (#92)

--- a/src/client/components/Tile.css
+++ b/src/client/components/Tile.css
@@ -3,7 +3,7 @@
   height: 100%;
   width: 23vw;
   box-shadow: 0px 0px 8px 4px rgba(224,224,224,0.75);
-  margin: 10px;
+  margin: 30px;
   text-align: center;
   border-radius: 15px;
 }
